src/test/ui/issues/issue-38940.stderr
error[E0055]: reached the recursion limit while auto-dereferencing `I`
  --> $DIR/issue-38940.rs:43:22
   |
LL |     let x: &Bottom = &t;
   |                      ^^ deref recursion limit reached
   |
   = help: consider adding a `#![recursion_limit="20"]` attribute to your crate

error[E0308]: mismatched types
  --> $DIR/issue-38940.rs:43:22
   |
LL |     let x: &Bottom = &t;
   |                      ^^ expected struct `Bottom`, found struct `Top`
   |
   = note: expected type `&Bottom`
              found type `&Top`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0055, E0308.
For more information about an error, try `rustc --explain E0055`.
